Return files with archives
